# socar-data-car-image-uploader

./: .gitignore  README.md  pyproject.toml
app/: app.py
